@@ -1,3 +1,8 @@
+2006-05-15  Roger Sayle  <roger@eyesopen.com>
+
+	PR target/26600
+	* gcc.target/i386/pr26600.c: New test case.
+
 2006-05-15  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/27505
